--- a/ProjectDiamondShop/Views/Diamonds/ViewDiamond.cshtml
+++ b/ProjectDiamondShop/Views/Diamonds/ViewDiamond.cshtml
@@ -6,17 +6,36 @@
 <link href="~/Content/ProductCss/linearicons.css" rel="stylesheet" />
 <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
+
 <link href="~/Content/Diamonds/ViewDiamond.css" rel="stylesheet" />
-<link rel="icon" type="image/png" href="~/Content/Icon/diamond.png" />
 
 <div class="container container-custom">
-    <a href="@Url.Action("Index", "Diamonds")" class="back-to-gallery">
+    <a href="@Url.Action("Index", "Diamonds")" class="back-to-gallery bi-caret-left-square">
         <span class="lnr lnr-exit"></span>Back to Gallery
     </a>
+
     <div class="row row-custom">
         <div class="col-md-6">
             <div id="mainImageContainer" class="main-image-container">
-                <img id="mainImage" src="@Model.diamondImagePath.Split('|')[0]" alt="@Model.diamondName" class="img-responsive">
+                <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        @foreach (var imagePath in Model.diamondImagePath.Split('|').Select((value, index) => new { value, index }))
+                        {
+                            <div class="carousel-item @(imagePath.index == 0 ? "active" : "")">
+                                <img src="@imagePath.value" alt="@Model.diamondName @imagePath.index" class="d-block w-100 img-thumbnail">
+                            </div>
+                        }
+                    </div>
+                    <a class="carousel-control-prev" href="#imageCarousel" role="button" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#imageCarousel" role="button" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </a>
+                </div>
             </div>
             <div class="thumbnail-container">
                 @foreach (var imagePath in Model.diamondImagePath.Split('|').Select((value, index) => new { value, index }))
@@ -25,12 +44,13 @@
                         <img src="@imagePath.value" alt="@Model.diamondName @imagePath.index" class="img-thumbnail">
                     </button>
                 }
+
                 @if (ViewBag.Certificates != null && ViewBag.Certificates.Count > 0)
                 {
                     foreach (var certificate in ViewBag.Certificates)
                     {
                         <button class="thumbnail-button-cert" data-image="@Url.Content(certificate.cerImagePath)">
-                            <img src="@Url.Content(certificate.cerImagePath)" alt="@certificate.certificateNumber" class="img-thumbnail">
+                            <img src="~/Image/HomePage/Logo/Certificate.png" />Certificate
                         </button>
                     }
                 }
@@ -39,7 +59,7 @@
         <div class="col-md-6">
             <h2 class="diamond-title">@Model.diamondName</h2>
             <p>@Model.diamondDescription</p>
-            <p><strong>Price:</strong> $@String.Format("{0:N0}", @Model.diamondPrice)</p>
+            <p class="price"><strong>Price:</strong> $@String.Format("{0:0.##}", @Model.diamondPrice)</p>
             <div class="action-buttons">
                 @using (Html.BeginForm("AddToCart", "Cart", FormMethod.Post, new { id = "add-to-cart-form" }))
                 {
@@ -48,15 +68,17 @@
                     @Html.Hidden("settingID", "0", new { id = "settingID" })
                     @Html.Hidden("settingSize", "0", new { id = "settingSize" })
                     <button type="button" id="add-to-cart-button" class="btn-custom">
-                        <span class="lnr"></span>Add to Cart
+                        <span class="lnr bi-cart-plus-fill"></span> Add to Cart
                     </button>
                 }
             </div>
             <div class="video-container mt-3">
-                <iframe class="video-frame" width="560" height="315" src="https://www.youtube.com/embed/EjVKezPY5Vo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="video-frame" src="https://www.youtube.com/embed/EjVKezPY5Vo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </div>
+
+
     <div class="row additional-info">
         <div class="col-md-12">
             <h3>Additional Information</h3>
@@ -131,7 +153,7 @@
                 <div class="form-group">
                     <label for="accentStone">Accent Stone</label>
                     <select id="accentStone" class="form-control select2" disabled>
-                        <option value="0" data-image="/path/to/default-image.jpg">No accent stone</option>
+                        <option value="0" data-image="\Image\DiamondDTO\AccentStone">No accent stone</option>
                     </select>
                 </div>
             </div>
@@ -176,9 +198,21 @@
                 return $state;
             }
 
+            // Initialize Bootstrap Carousel
+            var myCarousel = new bootstrap.Carousel('#imageCarousel', {
+                interval: 3000 // 3 seconds
+            });
+
             $(".thumbnail-button").click(function () {
                 var newImage = $(this).data('image');
-                $("#mainImage").attr('src', newImage);
+                var index = $(this).index(); // Get the index of the clicked thumbnail
+
+                // Find the corresponding carousel item and set it as active
+                $('#imageCarousel .carousel-item').removeClass('active');
+                $('#imageCarousel .carousel-item').eq(index).addClass('active');
+
+                // Pause the carousel
+                myCarousel.pause();
             });
 
             $(".thumbnail-button-cert").click(function () {
@@ -259,4 +293,7 @@
             });
         });
     </script>
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 }
+
